modifications on proxy for binance api v10

--- a/app/src/scripts/languages/Jet_UI_EN.json
+++ b/app/src/scripts/languages/Jet_UI_EN.json
@@ -15,7 +15,7 @@
         "transactions": "Flight Logs"
     },
     "cockpit": {
-        "title": "NaiScience",
+        "title": "Nairance",
         "asset": "Asset",
         "detail": "Detail",
         "native": "Native",
